<resources>
    <string name="app_name">SwimmingPool_RS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_announcement">Announcement</string>
    <string name="menu_logout">Log Out</string>

    <string name="logout">Logged Out</string>
</resources>